# Linux-RODECaster-Driver

./: .gitignore  Cargo.toml  README.md  rodecaster-vad.service  rodecaster-vad.toml
config/wireplumber/: 50-rodecaster-vad.lua
scripts/: setup_snd_aloop.sh
src/: alsa_bridge.rs  audio_format.rs  channel_map.rs  config.rs  drift.rs  main.rs  mixer.rs  ring_buffer.rs  shm.rs  signal_handler.rs  usb_bridge.rs  usb_descriptor.rs
